--- a/src/app/home/components/courses/courses.component.html
+++ b/src/app/home/components/courses/courses.component.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="course-detail">
-                <h3><a routerLink="/home/detalle-curso/{{ item.id }}">{{ item.nombre }}</a></h3>
+                <h3><a (click)="goToCourseDetail(item.id)">{{ item.nombre }}</a></h3>
                 <div class="ranking">
                     <star-rating [starType]="'svg'" [rating]="3.8" [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
                     <p>80 votos | 25 visitas</p>
