--- a/src/app/home/components/courses/courses.component.scss
+++ b/src/app/home/components/courses/courses.component.scss
@@ -1,6 +1,6 @@
 .main-container {
-    width: 100%;
-    margin: 120px 0 0 0;
+    width: 80%;
+    margin: 60px 0;
     //min-height: 400px;
     //background: #046a79;  /* fallback for old browsers */
     //background: -webkit-linear-gradient(to left, #01c2d8, #046a79);  /* Chrome 10-25, Safari 5.1-6 */
@@ -44,10 +44,10 @@
 }
 
 .courses-container {
-    width: 100%;
+    width: 80%;
     margin: 40px 24px;
     display: grid;
-    grid-template-columns: 360px 360px 360px;
+    grid-template-columns: 320px 320px 320px;
     gap: 40px 20px;
     align-items: center;
     justify-content: center;
@@ -146,6 +146,7 @@
 .single-course .course-detail h3 a {
     text-decoration: none;
     color: black;
+    cursor: pointer;
 }
 
 .single-course .course-detail .ranking {
