--- a/src/app/home/components/main/main.component.scss
+++ b/src/app/home/components/main/main.component.scss
@@ -1,3 +1,10 @@
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .anuncios {
     width: 90%;
     margin: 32px auto;
