--- a/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
+++ b/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
@@ -1,5 +1,9 @@
 <div class="contenedor">
-    <h3>Matricular estudiante</h3>
+    <div class="title dialog-header-close">
+        <mat-icon>library_books</mat-icon>
+        <h2>Matricular estudiante</h2>
+        <mat-icon mat-dialog-close style="color: red;">close</mat-icon>
+    </div>
 
     <div>
         <mat-form-field appearance="legacy" class="search">
@@ -65,9 +69,9 @@
                 </button>
                 <button
                 *ngIf="element.matriculado"
-                mat-stroked-button
-                class="desmatricular"
-                (click)="matricularEstudiante(element, 'desmtricular')"
+                mat-raised-button
+                color="warn"
+                (click)="matricularEstudiante(element, 'desmatricular')"
                 >
                 Desmatricular
             </button>
