creacion de rama de pruebas

--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
@@ -90,7 +90,7 @@
                                 <p>{{item.value}}</p>
                                 <mat-checkbox
                                     [(ngModel)]="item.respuesta"
-                                    color="primary"> {{ item.respuesta }}
+                                    color="primary">
                                 </mat-checkbox>
                                 <div>
                                     <textarea [(ngModel)]="item.answer"></textarea>
