creacion de reuniones terminado

--- a/src/app/dashboard/components/cursos/course-home/course-home.component.html
+++ b/src/app/dashboard/components/cursos/course-home/course-home.component.html
@@ -73,6 +73,14 @@
             </div>
         </div>
 
+        <div class="card">
+            <div class="img"><img src="/assets/icons/video-conf.png" alt=""></div>
+
+            <div class="options">
+                <a (click)="goToVideo()">Videoconferencia</a>
+            </div>
+        </div>
+
     </section>
     <section class="buttons">
         <button mat-button (click)="goBack()" ><< Volver a lista de cursos</button>
