--- a/src/app/dashboard/components/cursos/course-description/course-description.component.html
+++ b/src/app/dashboard/components/cursos/course-description/course-description.component.html
@@ -19,7 +19,7 @@
             </mat-card-content>
             <mat-card-actions>
               <button mat-button (click)="descriptionEdit('descripcion')">Editar</button>
-              <button mat-button>Eliminar</button>
+              <button mat-button (click)="descriptionDelete('descripcion')">Eliminar</button>
             </mat-card-actions>
           </mat-card>
         </div>
