--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -112,7 +112,7 @@
         </mat-expansion-panel-header>
         <mat-list>
           <mat-list-item class="secondary-list">
-            <a mat-list-item routerLink="/dashboard/course-registration">Mis cursos</a>
+            <a mat-list-item (click)="goToMyCourses()">Mis cursos</a>
             <mat-divider></mat-divider>
           </mat-list-item>
           <mat-list-item class="secondary-list">
